--- a/public/index.html
+++ b/public/index.html
@@ -6,45 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
 
-    <title>Shavkat Sadulloyev</title>
+    <title>Nodirbek | Kholiqulov</title>
 
     <link rel="canonical" href="https://nodirbekdev.uz/" />
 
     <!--  Social tags -->
     <meta
       name="keywords"
-      content="portfolio, website, astronauts, python, C++, java, html, ui-ux designs"
+      content="portfolio, website, frontend developer, react js, next js, javascript, responsive websites, ui-ux designs"
     />
 
     <!-- Schema.org markup for Google+ -->
-    <meta itemprop="name" content="Shavkat Sadulloyev" />
+    <meta itemprop="name" content="Nodirbek | Kholiqulov" />
     <meta
       name="description"
-      content="Shavkat Sadulloyev can help you to create web pages that work well on a variety of devices and screen sizes. He uses responsive web design techniques to ensure usability across different platforms"
+      content="Kholiqulov Nodirbek can help you to create web pages that work well on a variety of devices and screen sizes. He uses responsive web design techniques to ensure usability across different platforms"
     />
     <meta itemprop="image" content="./me.png" />
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="product" />
-    <meta name="telegram:site" content="@" />
-    <meta name="instagram:site" content="@_moon737" />
-    <meta name="twitter:title" content="Shavkat Sadulloyev" />
+    <meta name="telegram:site" content="@squids_rituals" />
+    <meta name="instagram:site" content="@khn_dev" />
+    <meta name="twitter:title" content="Nodirbek | Kholiqulov" />
     <meta
       name="twitter:description"
-      content="Shavkat Sadulloyev can help you to create web pages that work well on a variety of devices and screen sizes. He uses responsive web design techniques to ensure usability across different platforms."
+      content="Kholiqulov Nodirbek can help you to create web pages that work well on a variety of devices and screen sizes. He uses responsive web design techniques to ensure usability across different platforms."
     />
     <meta name="twitter:image" content="./me.png" />
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="Shavkat Sadulloyev" />
+    <meta property="og:title" content="Nodirbek | Kholiqulov" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://nodirbekdev.uz/" />
     <meta property="og:image" content="./me.png" />
     <meta
       property="og:description"
-      content="Shavkat Sadulloyev can help you to create web pages that work well on a variety of devices and screen sizes. He uses responsive web design techniques to ensure usability across different platforms"
+      content="Kholiqulov Nodirbek can help you to create web pages that work well on a variety of devices and screen sizes. He uses responsive web design techniques to ensure usability across different platforms"
     />
-    <meta property="og:site_name" content="Shavkat Sadulloyev" />
+    <meta property="og:site_name" content="Nodirbek | Kholiqulov" />
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="120x120" href="./me.png" />
